--- a/style.css
+++ b/style.css
@@ -1,14 +1,15 @@
-.container{
-    margin: 0 auto;
-    width: 80%;
-    padding-top: 20px;
+.container {
+    margin: 0;
+    /* width: 375px; */
+    min-height: 100vh;
+    /* border: 10px solid coral; */
 }
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
-a{
+a {
     text-decoration: none;
     letter-spacing: 0.1em;
     display: inline-block;
@@ -18,74 +19,86 @@ a{
     text-align: center;
     transition: all 0.5s;
 }
-body{
+body {
     background-image: url(images/Header-llustration-desktop.svg);
     background-size: cover;
-    background-repeat: no-repeat;
-    font-family: 'Inter', sans-serif;
-    font-family: 'Poppins', sans-serif;
+    background-repeat: repeat-y;
+    background-position: 2000px 200px;
+    background-attachment: local;
+    /* transform: rotate(-145.24deg); */
+    font-family: "Poppins", sans-serif;
+    font-family: "Inter", sans-serif;
+   
 }
-.nav-flex{
-    max-width: 300px;
+.nav-flex {
+    /* border: 5px solid black; */
+    width: 360px;
     text-align: center;
-    margin: 0 auto;
+    margin: 0;
+    padding-right: 2%;
+    padding-left: 2%;
 }
-.nav-flex ul{
-    display: flex;
-    list-style: none;
-    justify-content: center;
-}
-.nav-flex ul li a{
-    font-weight: 600;
-    font-size: 15px;
-    line-height: 20px;
-    font-style: normal;
-    color: #344563;
-}
-.nav-flex ul li{
-    flex: 1;
-}
-.home-content{
-    padding-top: 150px;
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-}
-.home-content h1{
-    align-items: center;
-    justify-content: center;
-    font-size: 40px;
-}
-.home-content .text-2 h1{
-    color: #36b37f;
-    font-size: 50px;
-}
-.home-content .text-3{
-    text-align: center;
-    padding-top: 10px;
-    line-height: 32px;
-    font-family: inter;
-    font-weight: 400;
-}
-.social-icons{
-    max-width: 300px;
-    text-align: center;
-    align-items: center;
-    margin: 0 auto;
-}
-.social-icons ul{
+.nav-flex ul {
     display: flex;
     list-style: none;
     justify-content: space-between;
-    padding-top: 25px;
 }
-.social-icons ul li i{
+.nav-flex ul li a {
+    font-weight: 600;
+    font-size: 15px;
+    font-style: normal;
+    color: #344563;
+}
+.nav-flex ul .pages {
+    justify-content: flex-start;
+}
+.nav-flex ul .menu {
+    justify-content: flex-end;
+}
+.home-content {
+    padding-top: 50px;
+    align-items: center;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    padding-left: 2%;
+    padding-right: 2%;
+}
+.home-content .primary {
+    align-items: center;
+    align-content: center;
+    font-size: 20px;
+    line-height: 2.3em;
+}
+.home-content .software-dev {
+    color: #36b37f;
+}
+.home-content .supporting {
+    text-align: center;
+    padding-top: 30px;
+    line-height: 1.5em;
+    font-size: 13px;
+    padding-left: 2%;
+    padding-right: 2%;
+}
+.social-icons{
+    padding-left: 2%;
+    padding-right: 2%;
+}
+.social-icons ul {
+    display: flex;
+    list-style: none;
+    justify-content: center;
+    padding-top: 30px;
+}
+.social-icons ul li i {
     width: 100%;
     height: 100%;
-    color: #505F79;
-    font-size: 25px;
+    color: #505f79;
 }
-.my-recent-works{
-    padding-top: 450px;
+.my-recent-works {
+    padding-top: 30px;
     text-align: center;
+    padding-left: 2%;
+    padding-right: 2%;
 }
