--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,4 @@
-.container {
-  margin: 0;
-
-  /* width: 375px; */
-  min-height: 100vh;
-
-  /* border: 10px solid coral; */
-}
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800&family=Poppins:wght@200;300;400;500;600;700&display=swap");
 
 * {
   padding: 0;
@@ -25,24 +18,22 @@ a {
 }
 
 body {
-  background-image: url(images/Header-llustration-desktop.svg);
-  background-size: cover;
-  background-repeat: repeat-y;
-  background-position: 2000px 200px;
-  background-attachment: local;
-
-  /* transform: rotate(-145.24deg); */
   font-family: "Poppins", sans-serif;
   font-family: "Inter", sans-serif;
 }
 
 .nav-flex {
-  /* border: 5px solid black; */
-  width: 360px;
+  background-image: url('./images/Header-llustration-desktop.svg');
+  background-size: cover;
+  background-repeat: repeat-y;
+  background-position: bottom;
+  background-attachment: scroll;
   text-align: center;
   margin: 0;
   padding-right: 2%;
   padding-left: 2%;
+  max-width: 375px;
+  border: 10px solid black;
 }
 
 .nav-flex ul {
@@ -119,4 +110,5 @@ body {
   text-align: center;
   padding-left: 2%;
   padding-right: 2%;
+  padding-bottom: 30px;
 }
