--- a/css/style.css
+++ b/css/style.css
@@ -27,39 +27,37 @@ body {
   margin: 0;
   padding-right: 2%;
   padding-left: 2%;
-  max-width: 375px;
-  border: 10px solid black;
+  width: 375px;
 }
 
-.nav-flex ul {
+header {
   display: flex;
   list-style: none;
   justify-content: space-between;
 }
 
-.nav-flex ul li a {
-  font-weight: 600;
+header ul {
+  list-style: none;
+  justify-content: flex-start;
+}
+
+header li a {
+  font-weight: bold;
   font-size: 15px;
   font-style: normal;
   color: #344563;
 }
 
-.nav-flex ul .pages {
-  justify-content: flex-start;
-}
-
-.nav-flex ul .menu {
+header nav .menu {
   justify-content: flex-end;
 }
 
 .home-content {
-  background-image: url('../images/header-illsutration-mobile.png');
+  background-image: url("../images/header-illsutration-mobile.png");
   background-size: contain;
   background-repeat: no-repeat;
-  padding-top: 50px;
+  padding-top: 60px;
   height: 100vh;
-
-  /* width: 375px; */
   align-items: center;
   text-align: center;
   display: flex;
@@ -72,7 +70,7 @@ body {
   align-items: center;
   align-content: center;
   font-size: 20px;
-  line-height: 2em;
+  line-height: 1.6em;
 }
 
 .home-content .software-dev {
@@ -86,20 +84,22 @@ body {
   padding-top: 25px;
   line-height: 1.5em;
   font-size: 13px;
+  font-style: normal;
   padding-left: 2%;
   padding-right: 2%;
+  font-weight: normal;
 }
 
 .social-icons {
   padding-left: 2%;
   padding-right: 2%;
+  padding-top: 15px;
 }
 
 .social-icons ul {
   display: flex;
   list-style: none;
   justify-content: center;
-  padding-top: 20px;
 }
 
 .social-icons ul li i {
@@ -111,7 +111,7 @@ body {
 .my-recent-works {
   padding-top: 5px;
   text-align: center;
-  padding-left: 2%;
-  padding-right: 2%;
   padding-bottom: 30px;
+  font-size: 14px;
+  align-items: center;
 }
