--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ a {
   width: 100%;
   text-align: center;
   transition: all 0.5s;
+  color: #000;
 }
 
 body {
@@ -28,24 +29,34 @@ body {
   padding-right: 2%;
   padding-left: 2%;
   max-width: 375px;
-  border: 10px solid black;
 }
 
-.nav-flex ul {
+.nav-flex header {
   display: flex;
   list-style: none;
   justify-content: space-between;
 }
 
-.nav-flex ul li a {
+.nav-flex header li a {
   font-weight: 600;
   font-size: 15px;
   font-style: normal;
   color: #344563;
 }
 
-.nav-flex ul .pages {
+.nav-flex header .welcome {
   justify-content: flex-start;
+}
+
+.social-icons ul {
+  display: flex;
+  list-style: none;
+  justify-content: center;
+  padding-top: 20px;
+}
+
+.nav-flex header ul {
+  list-style: none;
 }
 
 .nav-flex ul .menu {
@@ -53,7 +64,7 @@ body {
 }
 
 .home-content {
-  background-image: url('../images/header-illsutration-mobile.png');
+  background-image: url("../images/header-illsutration-mobile.png");
   background-size: contain;
   background-repeat: no-repeat;
   padding-top: 50px;
@@ -72,34 +83,30 @@ body {
   align-items: center;
   align-content: center;
   font-size: 20px;
-  line-height: 2em;
+  line-height: 2rem;
 }
 
 .home-content .software-dev {
   color: #36b37f;
   font-size: 30px;
   font-weight: bold;
+  line-height: 2rem;
 }
 
 .home-content .supporting {
   text-align: center;
-  padding-top: 25px;
+  padding-top: 20px;
   line-height: 1.5em;
   font-size: 13px;
   padding-left: 2%;
   padding-right: 2%;
+  opacity: 0.5;
 }
 
 .social-icons {
   padding-left: 2%;
   padding-right: 2%;
-}
-
-.social-icons ul {
-  display: flex;
-  list-style: none;
-  justify-content: center;
-  padding-top: 20px;
+  padding-top: 5px;
 }
 
 .social-icons ul li i {
@@ -114,4 +121,5 @@ body {
   padding-left: 2%;
   padding-right: 2%;
   padding-bottom: 30px;
+  line-height: 2rem;
 }
