--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ body {
   padding-right: 2%;
   padding-left: 2%;
   max-width: 375px;
+  margin-bottom: 50px;
 }
 
 .nav-flex header {
@@ -109,6 +110,7 @@ body {
   background-image: url("../images/header-illsutration-mobile.png");
   background-size: contain;
   background-repeat: no-repeat;
+  background-position: 10px 3px;
   padding-top: 50px;
   height: 100vh;
   align-items: center;
@@ -120,27 +122,68 @@ body {
 }
 
 .home-content .primary {
-  align-items: center;
-  align-content: center;
-  font-size: 20px;
-  line-height: 2rem;
+  height: 192px;
+  width: 327px;
 }
 
-.home-content .software-dev {
-  color: #36b37f;
-  font-size: 30px;
+.frameworks h2,
+.skills h2,
+.languages h2 {
+  margin-top: 30px;
+  margin-bottom: 25px;
+  text-align: center;
+}
+
+.posts h2 {
+  margin: 15px;
+  margin-top: 10px;
+  font-size: 25px;
+  font-weight: 500;
   font-weight: bold;
-  line-height: 2rem;
+}
+
+.about-me-text h2 {
+  padding-top: 30px;
+  font-size: 40px;
+  font-weight: 700;
+  color: #172b4d;
+}
+
+.home-content .primary h2 {
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 1.3em;
+  color: #172b4d;
+}
+
+.home-content .primary .software-dev {
+  color: #36b37f;
+  margin-top: 10px;
+  font-weight: 700;
+  line-height: 52px;
+  font-size: 40px;
 }
 
 .home-content .supporting {
+  height: 164px;
+  width: 327px;
+  margin-top: 70px;
+  margin-bottom: 20px;
+}
+
+.my-recent-works h3 {
+  line-height: 3rem;
+  font-weight: 700;
+  font-size: 40px;
+  color: #172b4d;
+}
+
+.home-content .supporting h3 {
+  color: #172b4d;
+  font-weight: 400;
+  font-size: 20px;
   text-align: center;
-  padding-top: 20px;
-  line-height: 1.5em;
-  font-size: 13px;
-  padding-left: 2%;
-  padding-right: 2%;
-  opacity: 0.5;
+  line-height: 28px;
 }
 
 .social-icons {
@@ -157,38 +200,45 @@ body {
 }
 
 .my-recent-works {
-  padding-top: 45px;
-  text-align: center;
-  padding-left: 2%;
-  padding-right: 2%;
+  padding-top: 20px;
+  width: 327px;
+  height: 97px;
+  margin-bottom: 50%;
 }
 
-.my-recent-works h3 {
-  line-height: 3rem;
-  font-weight: 700;
-  font-size: 40px;
+.action {
+  margin-bottom: 5px;
 }
 
 .my-recent-works img {
   margin-top: 20px;
-  margin-bottom: 0;
+  margin-bottom: 50px;
+}
+.my-recent-works h3{
+  color: #172B4D;
+  font-size: 40px;
+  font-weight: 700;
+  align-items: center;
+  text-align: center;
 }
 
 /* ---------------------mobile version------------ */
 
-.my-works h1 {
+.my-works .posts h2 {
   margin-bottom: 20px;
-  margin-top: 50px;
+  margin-top: 30px;
   text-align: center;
   font-size: 30px;
   font-weight: bold;
   line-height: 1.2em;
+  color: #3A4A42;
+ 
 }
 
 .my-works {
   max-width: 375px;
   text-align: center;
-  margin-top: 0;
+  margin-top: 200px;
 }
 
 .my-works .indicator {
@@ -234,16 +284,8 @@ body {
   font-size: 20px;
 }
 
-.posts h2 {
-  margin: 15px;
-  margin-top: 10px;
-  font-size: 25px;
-  font-weight: 500;
-  font-weight: bold;
-}
-
 .about-me {
-  max-width: 375px;
+  width: 351px;
   text-align: center;
   background: url('../images/illustration\ 2-about\ me\ mobile.svg');
   background-repeat: no-repeat;
@@ -253,17 +295,10 @@ body {
 
 .about-me-text {
   width: 351px;
-  padding-top: 30px;
+  padding-top: 5px;
   background: url('../images/illustration\ 1-\ about\ me-mobile.svg');
   background-repeat: no-repeat;
   background-position: 290px 0;
-}
-
-.about-me-text h2 {
-  padding-top: 30px;
-  font-size: 40px;
-  font-weight: 700;
-  color: #172b4d;
 }
 
 .about-me .about-me-text p {
@@ -273,14 +308,6 @@ body {
   font-style: normal;
   color: #42526e;
   font-size: 20px;
-}
-
-.frameworks h2,
-.skills h2,
-.languages h2 {
-  margin-top: 30px;
-  margin-bottom: 25px;
-  text-align: center;
 }
 
 .about-me .about-me-text h2 {
@@ -337,6 +364,9 @@ body {
   font-size: 12px;
   align-items: center;
   margin: 5px;
+}
+.languages h2 ,.frameworks h2, .skills h2{
+  color: #344563;
 }
 
 .flex-skills {
