--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 body {
   font-family: "Poppins", sans-serif;
   font-family: "Inter", sans-serif;
-  width: 375px;
+  min-width: 375px;
 }
 
 .nav-flex {
@@ -18,13 +18,18 @@ body {
   padding-right: 2%;
   padding-left: 2%;
   max-width: 375px;
-  margin-bottom: 50px;
+  margin-bottom: 320px;
+  min-width: 375px;
 }
 
-.nav-flex header {
+.nav-middle ul {
+  display: none;
+}
+
+nav {
   display: flex;
-  list-style: none;
   justify-content: space-between;
+  align-items: baseline;
 }
 
 .nav-flex a {
@@ -65,7 +70,7 @@ body {
   color: #344563;
 }
 
-.nav-flex header .welcome {
+nav .nav-left {
   justify-content: flex-start;
 }
 
@@ -102,7 +107,7 @@ body {
   list-style: none;
 }
 
-.nav-flex ul .menu {
+nav .nav-right {
   justify-content: flex-end;
 }
 
@@ -110,7 +115,7 @@ body {
   background-image: url("../images/header-illsutration-mobile.png");
   background-size: contain;
   background-repeat: no-repeat;
-  background-position: 40px 2px;
+  background-position: 50px 10px;
   padding-top: 50px;
   height: 100vh;
   align-items: center;
@@ -384,7 +389,6 @@ body {
 
 .contact-me .contact-me-content {
   width: 327px;
-  padding: 10px;
   margin-top: 20px;
   height: auto;
 }
@@ -396,6 +400,7 @@ body {
   font-style: normal;
   font-weight: 700;
   font-size: 30px;
+  padding-left: 20px;
 }
 
 .languages img,
@@ -411,7 +416,7 @@ body {
   width: 375px;
   background: url("../images/illustration-contact-form.svg");
   background-repeat: no-repeat;
-  background-position: 320px 340px;
+  background-position: 320px 630px;
   margin-top: 5px;
 }
 
@@ -501,4 +506,295 @@ form {
 
 .form-group label {
   display: none;
+}
+
+hr {
+  display: none;
+}
+
+/* --------media queries----- */
+@media (min-width: 768px) {
+  body {
+    background-image: url(../images/Header-llustration-desktop.svg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    font-family: 'Inter', sans-serif;
+    font-family: 'Poppins', sans-serif;
+    border: 1px solid yellow;
+  }
+
+  .container {
+    width: 100%;
+    margin: auto;
+    margin-top: 2px;
+    border: 2px solid red;
+  }
+
+  .nav-flex {
+    min-width: 100%;
+    margin: auto;
+    height: 1115px;
+    border: 5px solid chocolate;
+  }
+
+  .nav-middle ul {
+    display: inline;
+    display: flex;
+    justify-content: space-evenly;
+  }
+
+  nav {
+    display: flex;
+    min-width: 100%;
+    justify-content: center;
+  }
+
+  nav .nav-left,
+  nav .nav-right {
+    display: none;
+  }
+
+  .nav-middle ul li {
+    margin-right: 25px;
+    font-size: 16px;
+    font-weight: 600;
+    color: #344563;
+    font-family: 'Inter', sans-serif;
+  }
+
+  .home-content {
+    background-image: none;
+    width: 920px;
+    height: 920px;
+    padding-top: 100px;
+    border: 1px solid blue;
+    margin: auto;
+  }
+
+  .home-content .primary {
+    height: 114px;
+    width: 920px;
+    margin: 12px;
+    text-align: center;
+  }
+
+  .home-content .supporting {
+    width: 920px;
+    height: 150px;
+    color: #172b4d;
+    font-size: 20px;
+    font-weight: 400;
+    margin-top: 2px;
+    margin-bottom: 0;
+    font-family: 'Inter', sans-serif;
+    padding: 0 60px;
+  }
+
+  .about-me-text h2 {
+    color: #172b4d;
+    font-weight: 700;
+    font-size: 48px;
+    font-style: normal;
+    font-family: 'Inter', sans-serif;
+    margin-bottom: 10px;
+    text-align: center;
+    width: 447px;
+    height: 48px;
+  }
+
+  .home-content .primary h2 {
+    text-align: center;
+    font-size: 40px;
+    line-height: 0.8em;
+    font-weight: 700;
+    color: #172b4d;
+    font-family: 'Inter', sans-serif;
+  }
+
+  .home-content .primary .software-dev {
+    font-size: 48px;
+  }
+
+  .social-icons {
+    margin-top: 0;
+    padding-top: 5px;
+  }
+
+  .my-recent-works {
+    margin-top: 500px;
+    width: 447px;
+    height: 80px;
+    padding-bottom: 0;
+    margin-bottom: 0;
+  }
+
+  .my-recent-works h3 {
+    color: #172b4d;
+    font-size: 30px;
+    font-weight: 700;
+    font-style: normal;
+  }
+
+  .my-recent-works img {
+    display: none;
+  }
+
+  .my-works {
+    min-width: 1171px;
+    min-height: 1020px;
+    border: 1px solid green;
+    margin: auto;
+  }
+
+  .works .work-1,
+  .works .work-2,
+  .works .work-3,
+  .works .work-4,
+  .works .work-5,
+  .works .work-6 {
+    max-width: 369px;
+    max-height: 474px;
+  }
+
+  .works {
+    display: grid;
+    gap: 12px;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  .about-me {
+    width: 100%;
+    height: 345px;
+    border: 5px solid black;
+    margin: auto;
+    background: url("../images/Group\ desktop.svg");
+    background-repeat: no-repeat;
+    background-position: 1098px 0;
+  }
+
+  .about-me-text {
+    border: 1px solid purple;
+    width: 100%;
+    height: 345px;
+    background: url("../images/Group\ desk.svg");
+    background-repeat: no-repeat;
+    background-position: px;
+  }
+
+  .about-me-text p {
+    font-weight: 400;
+    font-size: 20px;
+    color: #42526e;
+    margin-top: 10px;
+    width: 920px;
+    height: 96px;
+    padding-left: 350px;
+    padding-top: 20px;
+    text-align: center;
+  }
+
+  .about-me .get-resume {
+    margin-top: 60px;
+  }
+
+  .my-knowledge {
+    width: 1171px;
+    margin: auto;
+    display: grid;
+    gap: 2px;
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .my-knowledge .languages,
+  .my-knowledge .frameworks,
+  .my-knowledge .skills {
+    width: 369px;
+    height: 375px;
+  }
+
+  .contact-form {
+    min-width: 1171px;
+    display: grid;
+    gap: 5px;
+    margin: 20px auto;
+    grid-template-columns: 3fr 4fr;
+    border: 1px solid chocolate;
+  }
+
+  .contact-form .contact-me {
+    border: 2px solid black;
+    width: 463px;
+  }
+
+  .contact-me-content {
+    height: 258px;
+    width: 463px;
+  }
+
+  .contact-me-content h3 {
+    padding-right: 15px;
+    color: #172b4d;
+    width: 463px;
+    font-weight: 700;
+    font-size: 28px;
+    align-items: baseline;
+    text-align: center;
+    align-content: center;
+  }
+
+  form {
+    border: 2px solid black;
+    width: 684px;
+  }
+
+  .form-group {
+    margin-right: 0;
+  }
+
+  .email,
+  .contact-shape {
+    display: none;
+  }
+  .email {
+    height: 200px;
+    width: 500;
+    border: 2px solid red;
+  }
+
+  hr {
+    background: #dfe1e6;
+    width: 1440px;
+    height: 1px;
+    display: inline-block;
+    margin-bottom: 0;
+  }
+  .contact-container{
+    width: 100%;
+    min-height: 100vh;
+    border: 2px solid blue;
+    background-image: url('../images/Frame.svg');
+    background-repeat: no-repeat;
+    background-position: 1125px 150px;
+  }
+  .contact-container .social-icons{
+    padding-top: 0;
+    margin-top: 0;
+  }
+  .contact-illus-1{
+    height: 160px;
+    width: 110px;
+    margin-top: 0;
+    padding-top: 0;
+    border: 2px solid black;
+    /* background-image: url('../images/contact\ illus-1.svg'); */
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: 5px 10px;
+  }
+  .contact-illus-2{
+    border: 1px solid black;
+    height: 150px;
+    width: 100px;
+    margin-left: 130px;
+  }
 }
