--- a/css/style.css
+++ b/css/style.css
@@ -556,6 +556,53 @@ hr {
   display: none;
 }
 
+.nav-middle.show ul {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 10px;
+  padding-top: 92px;
+  padding-left: 18px;
+  margin: 0 12px;
+  background: #fff;
+  z-index: 10;
+}
+
+.nav-middle.show ul li {
+  font-size: 32px;
+  font-weight: 800;
+  color: #3a4a42;
+}
+
+.menu {
+  position: relative;
+  width: 24px;
+  height: 24px;
+  right: 5%;
+  top: 2%;
+  background: url('../images/Icon-Menu.svg');
+  background-size: 24px;
+  background-repeat: no-repeat;
+  background-position: center;
+  cursor: pointer;
+  z-index: 10000;
+}
+
+.menu.show {
+  position: fixed;
+  right: 8%;
+  top: 2%;
+  background: url('../images/Icon\ -\ Cancel.png');
+  background-size: 24px;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
 /* --------media queries----- */
 @media (min-width: 768px) {
   body {
